답글 완료 기능 추가 완료, html에 상태에 따른 버튼 출력 완료, 필요한 dto들에 completeQna정보 추가 -> 전체 페이지에서 답글 완료 여부에 따라 청진기 색 변경 페이징 목록으로 이동시 해당 페이지 정보 적용, 글 목록 페이지 조회수 글씨 표시 게시글 삭제시 댓글에서 신고당한 내역 있는지 찾아서 삭제하는 기능 추가 완료 상세페이지에서 목록 버튼 클릭시 이전 url주소와 비교해서 이동 (마이페이지 / 게시판) 내 활동 로그인한 회원과 유저 아이디 비교해서 문구 다르게 출력

--- a/src/main/resources/static/css/board/read.css
+++ b/src/main/resources/static/css/board/read.css
@@ -39,6 +39,18 @@ body {
     height: 20px;
 }
 
+.completeBtn {
+    color: #67cafe;
+    background-color: #fff;
+    border: 1px solid #67cafe;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-border-color: #67cafe;
+    --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
+}
+
 .postContent {
     min-height: 250px   ;
     max-width: 100%;
