--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -73,7 +73,7 @@
                 <div>
                     <table class="table read">
                         <!--게시물 정보 받아오기-->
-                        <tbody class="list ps-3">
+                        <tbody class="list ps-3" th:with="page = ${pageRequestDTO.getPage()}">
                         <!-- 게시글이 비밀글이 아닐 때 -->
                         <tr th:each="dto:${responseDTO.dtoList}">
                             <td class="align-middle checkBox" th:if="${role eq 'ROLE_ADMIN'}">
@@ -85,11 +85,11 @@
 
                             <!--비밀글이 아닐때-->
                             <td class="align-middle listOne" th:if="${dto.secret==false} or (${dto.secret == true} and (${username} == ${dto.userId})) or ((${dto.secret == true} and (${username} != ${dto.userId}))and(${role ne 'ROLE_USER'}))">
-                                <a class="move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}">
+                                <a class="move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}, data-page=${page}">
                                     <div class="d-flex align-items-center">
                                         <div class="replyAuth" th:if="${dto.replyAuth==true}">
-                                            <img class="replyAuthImg" src="/img/tag/vetScope.png" alt="수의사만 답변 가능">
-                                        </div>
+                                            <img class="replyAuthImg" th:src="${dto.completeQna ? '/img/tag/completeQna.png' : '/img/tag/vetScope.png'}"
+                                                 th:alt="${dto.completeQna ? '답변 완료' : '수의사만 답변 가능'}">                                        </div>
                                         <div>
                                             <div class="title">
                                                 <span>
@@ -127,7 +127,7 @@
                                                     <img class="level" src="/img/level/purple.png" alt="User Level Image"
                                                          th:if="${dto.exp >= 3000}">
                                                 </span>
-                                                <span class="mx-1"> <span th:text="${dto?.viewCount}">5</span></span>
+                                                <span class="mx-1"> 조회수 <span th:text="${dto?.viewCount}"></span></span>
                                                 <span class="mx-1" th:if="${dto?.modDate == null}"
                                                       th:text="${#temporals.format(dto.regDate, 'yyyy-MM-dd HH:mm')}"></span>
                                                 <span class="mx-1" th:if="${dto?.modDate != null}"
@@ -147,7 +147,7 @@
                             <!--비밀글일때-->
                             <td class="align-middle listOne" colspan="2" th:if="((${dto.secret==true} and (${username} != ${dto.userId}))and(${role eq 'ROLE_USER'}))">
                                 <!--비밀글여부-->
-                                <a class="d-flex align-items-center move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}">
+                                <a class="d-flex align-items-center move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}, data-page=${page}">
                                 <span class="icon secret">
                                      <i class="bi bi-file-lock d-flex flex-fill"></i>
                                 </span>
@@ -390,7 +390,7 @@
         }
     });
 
-    // 비밀글 접근 권한 설정
+    // 비밀글 접근 권한 설정 + page 번호 유지
     document.addEventListener("DOMContentLoaded", function () {
         const moves = document.querySelectorAll(".move");
 
@@ -399,25 +399,21 @@
                 e.preventDefault();
 
                 let role = '[[${role}]]';
-                console.log(role)
                 let username = '[[${username}]]';
-                console.log(username)
                 let userId = this.getAttribute("data-userId");
-                console.log(userId)
                 let postNo = this.getAttribute("data-postNo");
-                console.log(postNo)
                 let secret = this.getAttribute("data-secret");
-                console.log(secret)
+                let page = this.getAttribute("data-page");
 
                 if (secret === 'true') {
                     if (role === 'ROLE_ADMIN' || role === 'ROLE_VET' || username === userId) {
-                        location.href = '/board/read/' + postNo;
+                        location.href = '/board/read/' + postNo + '?page=' + page;
                     } else {
                         alert('접근 권한이 없습니다.');
                     }
                 } else {
                     // 비밀글이 아닌 경우
-                    location.href = '/board/read/' + postNo;
+                    location.href = '/board/read/' + postNo + '?page=' + page;
                 }
             });
         });
