--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -431,7 +431,8 @@
                                         <a th:href="@{'/board/read/'+${dto.postNo}}">
                                             <div class="d-flex align-items-center">
                                                 <div class="replyAuth" th:if="${dto.replyAuth==true}">
-                                                    <img class="replyAuthImg" src="/img/tag/vetScope.png" alt="수의사만 답변 가능">
+                                                    <img class="replyAuthImg" th:src="${dto.completeQna ? '/img/tag/completeQna.png' : '/img/tag/vetScope.png'}"
+                                                         th:alt="${dto.completeQna ? '답변 완료' : '수의사만 답변 가능'}">
                                                 </div>
                                                 <div class="d-flex flex-column justify-content-evenly homeList">
                                                     <div>
