--- a/src/main/resources/templates/admin/report-detail.html
+++ b/src/main/resources/templates/admin/report-detail.html
@@ -26,7 +26,7 @@
             <!--신고자정보-->
             <div>
                 <span class="badge bg-secondary text-white m-1">신고자</span>
-                <th:block th:text="${reportDetail.userName}"></th:block>
+                <th:block th:text="${reportDetail.nickname}"></th:block>
                 /
                 <th:block th:text="${reportDetail.userId.userId}"></th:block>
             </div>
