--- a/src/main/resources/templates/summernote/summernote.html
+++ b/src/main/resources/templates/summernote/summernote.html
@@ -17,7 +17,7 @@
         let extensions = [];
         let originalFileName = [];
         let previousContents = '';
-
+        const s3UploadedUrl = /*[[${s3UploadedUrl}]]*/ 'default-url';
         // 섬머노트 초기화
         $('#summernote').summernote({
             height: 500,
@@ -148,9 +148,7 @@
                             $(contents).find('img').each(function () {
 
                                 currentUrls.push($(this).attr('src'));
-                                currentFileNames.push($(this).attr('data-filename'));
                                 currentUuids.push($(this).attr('data-uuid'));
-                                currentExtensions.push($(this).attr('data-extension'));
                             });
                         }
 
@@ -158,9 +156,7 @@
                             $(previousContents).find('img').each(function () {
 
                                 previousUrls.push($(this).attr('src'));
-                                previousFileNames.push($(this).attr('data-filename'));
                                 previousUuids.push($(this).attr('data-uuid'));
-                                previousExtensions.push($(this).attr('data-extension'));
 
                             });
                         }
@@ -170,6 +166,11 @@
                         // 각 배열들에 있는 내용을 현재 내용과 비교해 없는 것들을 deleted 에 저장
                         const deletedImagesUrls = previousUrls.filter(urls => !currentUrls.includes(urls));
 
+                        const deletedS3ImagesUrls =
+                                previousUrls.filter(urls => !currentUrls.includes(urls))
+                                    .filter(urls => urls.includes(s3UploadedUrl));
+
+                        console.log("deletedS3ImagesUrls: " + deletedS3ImagesUrls);
                         // 각 배열에 담긴 정보 순서는 모두 한 파일씩 일정하니 하나로 기준을 잡음
                         const deletedImagesUuids = previousUuids.filter(uuids => !currentUuids.includes(uuids));
 
@@ -178,6 +179,10 @@
 
                             deleteUploadImages(deletedImagesUrls, deletedImagesUuids)
 
+                        }
+
+                        if (deletedS3ImagesUrls.length > 0) {
+                            deleteS3File(deletedS3ImagesUrls);
                         }
 
                     }
@@ -193,7 +198,7 @@
 
             // 삭제할 이미지 URL을 배열로 추가
             deletedImagesUrls.forEach(url => {
-                formData.append('deletedImageUrl', url);
+                formData.append('deletedImageUrls', url);
             });
 
             $.ajax({
@@ -220,42 +225,6 @@
             });
         }
 
-                // function deleteUploadImages(deletedImagesUrls, deletedImagesUuids) {
-                //     const formData = new FormData();
-                //
-                //     deletedImagesUrls.forEach(url => formData.append('deletedImageUrl', url));
-                //
-                //     return new Promise((resolve, reject) => {
-                //         $.ajax({
-                //             url: '/api/upload/delete-backspace',
-                //             data: formData,
-                //             method: 'POST',
-                //             contentType: false,
-                //             processData: false,
-                //             cache: false,
-                //             success: function (response) {
-                //                 // 각 UUID 에 대해 상태 업데이트, 각 배열의 순서는 일정함
-                //                 deletedImagesUuids.forEach(uuid => {
-                //                     const index = imageUUIDs.indexOf(uuid);
-                //                     if (index > -1) {
-                //                         console.log("삭제할 이미지 uuid: " + uuid);
-                //                         console.log("삭제할 이미지 index: " + index);
-                //                         uploadedImages.splice(index, 1);
-                //                         originalFileName.splice(index, 1);
-                //                         imageUUIDs.splice(index, 1);
-                //                         extensions.splice(index, 1);
-                //                         console.log("이미지 삭제 성공:", response);
-                //                     }
-                //                 });
-                //                 resolve(response);
-                //             },
-                //             error: function (xhr, status, error) {
-                //                 console.error("이미지 삭제 오류:", xhr.status, xhr.responseText, error);
-                //                 reject(error);
-                //             },
-                //         });
-                //     });
-                // }
                 /* ---------------------------------------------------------------------------- */
 
                 // 게시글 저장 및 업로드 함수
@@ -396,6 +365,29 @@
             }
 
             /* ---------------------------------------------------------------------- */
+
+            function deleteS3File(fileUrls) {
+
+                let formData = new FormData();
+
+                formData.append('deletedS3ImageUrls', fileUrls);
+
+                $.ajax({
+                    url: '/api/upload/delete-s3file',
+                    data: formData,
+                    type: 'POST',
+                    contentType: false,
+                    processData: false,
+                    success: function(response) {
+                        console.log("업로드된 S3 파일 삭제 성공" + response);
+                    },
+                    error: function (error) {
+                        console.error('업로드된 S3 파일 삭제 실패: ', error);
+                    },
+                });
+
+            }
+
 
             function removeTempFileWithCancelButton(uuids, extensions) {
                 let formData = new FormData();
