join 취소버튼 href 설정 회원가입 시 수의사 인증버튼 누르지 않아도 users_vet status 값 바뀌는 오류 수정완 7/30

--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -123,7 +123,7 @@
                         <button class="join-button btn mb-4" onclick="showWelcomeMessage()">
                             <span>가입</span>
                         </button>
-                        <button class="cancel-button btn mb-4">
+                        <button class="cancel-button btn mb-4" onclick="window.location.href='/'">
                             <span>취소</span>
                         </button>
                     </div>
