--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -234,9 +234,14 @@
                     <tr class="replyBody">
                         <td class="p-2">
                             <div class="input-group">
-                                <input type="text" name="replyContent" class="form-control"
+                                <input th:if="${postDTO.isReplyAuth()==false} or (${postDTO.isReplyAuth()==true} and (${role} != 'ROLE_USER')) or (${username}==${postDTO.getUserId()})"
+                                       type="text" name="replyContent" class="form-control"
                                        placeholder="공지사항을 위반하는 댓글은 삭제될 수 있습니다."
                                        aria-label="댓글">
+                                <input th:if="(${postDTO.isReplyAuth()==true} and (${role} == 'ROLE_USER')) and (${username}!=${postDTO.getUserId()})"
+                                       type="text" name="replyContent" class="form-control"
+                                       placeholder="답변 권한이 있는 회원(작성자, 수의사, 관리자)만 댓글을 등록할 수 있습니다."
+                                       aria-label="댓글" readonly>
                             </div>
                         </td>
                         <td class="align-middle text-center">
@@ -270,7 +275,6 @@
                                 <!-- 게시글이 비밀글이 아닐 때 -->
                                 <td class="align-middle listOne" th:if="${dto.secret==false} or (${dto.secret == true} and (${username} == ${dto.userId})) or ((${dto.secret == true} and (${username} != ${dto.userId}))and(${role ne 'ROLE_USER'}))">
                                     <a class="move" href="#" th:attr="data-postNo=${dto.postNo}, data-secret=${dto.secret}, data-userId=${dto.userId}, data-page=${page}">
-                                        <!--                                        <a class="readDetail" th:attr="data-postNo=${dto.postNo}">-->
                                         <span class="align-middle" th:if="${dto.replyAuth==true}">
                                             <img class="replyAuthImg" th:src="${dto.completeQna ? '/img/tag/completeQna.png' : '/img/tag/vetScope.png'}"
                                                  th:alt="${dto.completeQna ? '답변 완료' : '수의사만 답변 가능'}">
@@ -389,68 +393,36 @@
 </body>
 <div th:include="include/footer :: footer"></div>
 <script>
-    //listBtn 버튼 클릭 이벤트
-    document.querySelector(".listBtn").addEventListener("click", function (e) {
-        e.preventDefault();
-        let boardCode = '[[${postDTO.boardCode}]]'
-        let username = '[[${username}]]';
-        let page = this.getAttribute("data-page");
-        let url = document.referrer;
-        let boardUrl = '/board/' + boardCode;
-        let myPageUrl = '/my/userActivity/';
-
-        if(url.includes(myPageUrl)) {
-            location.href = myPageUrl + username +'/posts';
-        } else {
-            location.href = boardUrl + '?page=' + page;
-        }
-    }, false)
-
-    //deletePostBtn 버튼 클릭 이벤트
-    document.addEventListener("DOMContentLoaded", function() {
-        const deletePostBtn = document.querySelector(".deletePostBtn");
-        if (deletePostBtn) {
-            deletePostBtn.addEventListener("click", function (e) {
-                e.preventDefault();
-                e.stopPropagation();
-                if (confirm('정말 이 게시물을 삭제하시겠습니까?')) {
-                    let postNo = [[${postDTO.postNo}]];
-                    location.href = '/board/delete/' + postNo;
-                }
-            }, false);
-        }
-    });
-
-    //replyCountBtn 버튼 클릭 이벤트
-    document.querySelectorAll(".replyCountBtn").forEach(function (button) {
-        button.addEventListener("click", function (e) {
-            e.preventDefault();
-            e.stopPropagation();
-            let postNo = this.getAttribute("data-postNo");
-            location.href = '/board/read/' + postNo + '#reply';
-        });
-    });
-
-    //modifyBtn, modify_qBtn 버튼 클릭 이벤트
-    document.addEventListener("DOMContentLoaded", function() {
-        const modifyBtn = document.querySelector(".modifyBtn");
-        const modify_qBtn = document.querySelector(".modify_qBtn");
-        if (modifyBtn) {
-            document.querySelector(".modifyBtn").addEventListener("click", function (e) {
-                e.preventDefault();
-                let postNo = [[${postDTO.postNo}]]
-                location.href = '/board/modify/' + postNo;
-            }, false)
-        } else if(modify_qBtn) {
-            document.querySelector(".modify_qBtn").addEventListener("click", function (e) {
-                e.preventDefault();
-                let postNo = [[${postDTO.postNo}]]
-                location.href = '/board/modify_q/' + postNo;
-            }, false)
-        }
-    });
-
     $(document).ready(function () {
+
+        if(document.referrer!==window.location.href) {
+            sessionStorage.setItem('previousUrl', document.referrer);
+        }
+
+        //listBtn 버튼 클릭 이벤트
+        $(".listBtn").on("click", function (e) {
+            e.preventDefault();
+
+            let boardCode = '[[${postDTO.boardCode}]]';
+            let username = '[[${username}]]';
+            let page = $(this).data("page");
+            let previousUrl = sessionStorage.getItem('previousUrl');
+
+            let boardUrl = '/board/' + boardCode;
+            let myPagePostsUrl = '/my/userActivity/' + username + '/posts';
+            let myPageRepliesUrl = '/my/userActivity/' + username + '/replies';
+            let myPageScrapsUrl = '/my/userActivity/' + username + '/scraps';
+
+            if (previousUrl.includes(myPagePostsUrl)) {
+                window.location.href = myPagePostsUrl;
+            } else if (previousUrl.includes(myPageRepliesUrl)) {
+                window.location.href = myPageRepliesUrl;
+            } else if (previousUrl.includes(myPageScrapsUrl)){
+                window.location.href = myPageScrapsUrl;
+            } else {
+                window.location.href = boardUrl + '?page=' + page;
+            }
+        });
 
         // 답변 완료 버튼 클릭 이벤트
         $('.completeBtn').on('click', function (e) {
@@ -493,6 +465,7 @@
             $('#formdislike').show();
             $('#formdislikeDelete').hide();
         }
+
         // 좋아요 버튼 클릭 이벤트
         $('.bi-hand-thumbs-up').on('click', function (e) {
             e.preventDefault();
@@ -538,6 +511,7 @@
                 });
             }
         });
+
         // 싫어요 버튼 클릭 이벤트
         $('.bi-hand-thumbs-down').on('click', function (e) {
             e.preventDefault();
@@ -638,6 +612,7 @@
                 });
             }
         });
+
         //게시글신고 버튼 클릭 이벤트
         $('.bi-file-x').on('mousedown', function () {
             // 아이콘 클래스 변경
@@ -662,46 +637,61 @@
         });
     });
 
-    // 댓글 등록
-    document.getElementById('formReply').addEventListener('submit', function (e) {
-        e.preventDefault();
+    document.addEventListener("DOMContentLoaded", function () {
 
-        let replyContent = document.querySelector('input[name="replyContent"]').value.trim();
+        // tr이 10번째인 것 만 아랫 밑줄 제거
+        const rows = document.querySelectorAll(".table.read tbody tr");
+        if (rows.length >= 10) {
+            const targetRow = rows[9]; // 10번째 tr, 인덱스 9
+            targetRow.style.borderBottom = "none"; // 10번째 tr의 밑줄 제거
 
-        if (!replyContent) {
-            alert('댓글을 입력하세요.');
-            return;
-        }
-
-        if (!confirm('댓글을 등록하시겠습니까?')) {
-            return;
-        }
-
-        let formData = {
-            userId: '[[${username}]]',
-            postNo: [[${postDTO.postNo}]],
-            replyContent: document.querySelector('input[name="replyContent"]').value.trim()
-        };
-        fetch('/replies/', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(formData)
-        })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Success:', data);
-                location.reload();
-            })
-            .catch((error) => {
-                console.error('Error:', error);
+            const cells = targetRow.querySelectorAll("td"); // 10번째 tr의 모든 td
+            cells.forEach(cell => {
+                cell.style.borderBottom = "none"; // 모든 td의 밑줄 제거
             });
-    });
+        }
 
+        //replyCountBtn 버튼 클릭 이벤트
+        document.querySelectorAll(".replyCountBtn").forEach(button => {
+            button.addEventListener("click", function (e) {
+                e.preventDefault();
+                e.stopPropagation();
+                let postNo = this.getAttribute("data-postNo");
+                location.href = '/board/read/' + postNo + '#reply';
+            });
+        });
 
-    // 댓글 목록
-    document.addEventListener('DOMContentLoaded', function () {
+        //modifyBtn, modify_qBtn 버튼 클릭 이벤트
+        const modifyBtn = document.querySelector(".modifyBtn");
+        const modify_qBtn = document.querySelector(".modify_qBtn");
+        if (modifyBtn) {
+            document.querySelector(".modifyBtn").addEventListener("click", function (e) {
+                e.preventDefault();
+                let postNo = [[${postDTO.postNo}]]
+                location.href = '/board/modify/' + postNo;
+            }, false)
+        } else if(modify_qBtn) {
+            document.querySelector(".modify_qBtn").addEventListener("click", function (e) {
+                e.preventDefault();
+                let postNo = [[${postDTO.postNo}]]
+                location.href = '/board/modify_q/' + postNo;
+            }, false)
+        }
+
+        //deletePostBtn 버튼 클릭 이벤트
+        const deletePostBtn = document.querySelector(".deletePostBtn");
+        if (deletePostBtn) {
+            deletePostBtn.addEventListener("click", function (e) {
+                e.preventDefault();
+                e.stopPropagation();
+                if (confirm('정말 이 게시물을 삭제하시겠습니까?')) {
+                    let postNo = [[${postDTO.postNo}]];
+                    location.href = '/board/delete/' + postNo;
+                }
+            }, false);
+        }
+
+        // 댓글 목록
         let pathParts = window.location.pathname.split('/');
         let postNo = pathParts[pathParts.length - 1]; // Assuming postNo is at the end of the path
 
@@ -887,63 +877,82 @@
                 return replyCard;
             }
         }
-    });
 
-    //pagination 클릭 이벤트
-    document.querySelector(".pagination").addEventListener("click", function (e) {
-        e.preventDefault()
-        e.stopPropagation()
+        // 댓글 등록
+        document.getElementById('formReply').addEventListener('submit', function (e) {
+            e.preventDefault();
 
-        //실제 클릭된 요소를 가져와서 target 변수에 할당
-        let target = e.target.closest('a');
+            let replyContent = document.querySelector('input[name="replyContent"]').value.trim();
 
-        if (!target) {
-            return;
-        }
+            if (!replyContent) {
+                alert('댓글을 입력하세요.');
+                return;
+            }
 
-        let num = target.getAttribute("data-num")
-        if (!num) {
-            num = 1; // 기본값 설정
-        }
+            if (!confirm('댓글을 등록하시겠습니까?')) {
+                return;
+            }
 
-        // 현재 URL 가져오기
-        let currentUrl = new URL(window.location.href);
+            let formData = {
+                userId: '[[${username}]]',
+                postNo: [[${postDTO.postNo}]],
+                replyContent: document.querySelector('input[name="replyContent"]').value.trim()
+            };
+            fetch('/replies/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(formData)
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Success:', data);
+                    location.reload();
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                });
+        });
 
-        // 페이지 번호 업데이트
-        currentUrl.searchParams.set('page', num);// replyCount로 이동한 경우 추가된 해시 제거 + 글목록영역으로 이동하는 해시로 변경
-        currentUrl.hash = '#readList';
-        // 페이지 번호 업데이트
-        currentUrl.searchParams.set('page', num);
+        //pagination 클릭 이벤트
+        document.querySelector(".pagination").addEventListener("click", function (e) {
+            e.preventDefault()
+            e.stopPropagation()
 
-        // 수정된 URL로 이동
-        window.location.href = currentUrl.href;
-        // replyCount로 이동한 경우 추가된 해시 제거 + 글목록영역으로 이동하는 해시로 변경
-        currentUrl.hash = '#readList';
+            //실제 클릭된 요소를 가져와서 target 변수에 할당
+            let target = e.target.closest('a');
 
-        // 수정된 URL로 이동
-        window.location.href = currentUrl.href;
+            if (!target) {
+                return;
+            }
 
-    }, false)
+            let num = target.getAttribute("data-num")
+            if (!num) {
+                num = 1; // 기본값 설정
+            }
 
-    // tr이 10번째인 것 만 아랫 밑줄 제거
-    document.addEventListener("DOMContentLoaded", function () {
-        let rows = document.querySelectorAll(".table.read tbody tr");
-        if (rows.length >= 10) {
-            let targetRow = rows[9]; // 10번째 tr, 인덱스 9
-            targetRow.style.borderBottom = "none"; // 10번째 tr의 밑줄 제거
+            // 현재 URL 가져오기
+            let currentUrl = new URL(window.location.href);
 
-            let cells = targetRow.querySelectorAll("td"); // 10번째 tr의 모든 td
-            cells.forEach(cell => {
-                cell.style.borderBottom = "none"; // 모든 td의 밑줄 제거
-            });
-        }
-    });
+            // 페이지 번호 업데이트
+            currentUrl.searchParams.set('page', num);// replyCount로 이동한 경우 추가된 해시 제거 + 글목록영역으로 이동하는 해시로 변경
+            currentUrl.hash = '#readList';
+            // 페이지 번호 업데이트
+            currentUrl.searchParams.set('page', num);
 
-    // 비밀글 접근 권한 설정 + page 번호 유지
-    document.addEventListener("DOMContentLoaded", function () {
-        const moves = document.querySelectorAll(".move");
+            // 수정된 URL로 이동
+            window.location.href = currentUrl.href;
+            // replyCount로 이동한 경우 추가된 해시 제거 + 글목록영역으로 이동하는 해시로 변경
+            currentUrl.hash = '#readList';
 
-        moves.forEach(function (move) {
+            // 수정된 URL로 이동
+            window.location.href = currentUrl.href;
+
+        });
+
+        // 비밀글 접근 권한 설정 + page 번호 유지
+        document.querySelectorAll(".move").forEach(move => {
             move.addEventListener("click", function (e) {
                 e.preventDefault();
 
@@ -957,7 +966,6 @@
                 if (secret === 'true') {
                     if (role === 'ROLE_ADMIN' || role === 'ROLE_VET' || username === userId) {
                         location.href = '/board/read/' + postNo + '?page=' + page;
-
                     } else {
                         alert('접근 권한이 없습니다.');
                     }
